--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.4.5"
+  },
+   "overrides": {
+    "debug": "4.3.4"
   }
 }
